--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
                                     d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
                                 />
                             </svg>
+                            <div id="discographybox" class="discographybox">
+                                <a href="#album">KoRn</a>
+                                <a href="#album2">Life Is Peachy</a>
+                                <a href="#album3">Follow The Leader</a>
+                                <a href="#album4">Issues</a>
+                                <a href="#album5">Untouchables</a>
+                                <a href="#album6">Take A Look In The Mirror</a>
+                                <a href="#album7">See You On The Other Side</a>
+                            </div>
                         </div>
                         <button>
                             <a href="https://drslumz.github.io/The-Bung/"
                                 >Merch</a
                             >
                         </button>
-                    </div>
-                    <div id="discographybox" class="discographybox">
-                        <a href="#album">KoRn</a>
-                        <a href="#album2">Life Is Peachy</a>
-                        <a href="#album3">Follow The Leader</a>
-                        <a href="#album4">Issues</a>
-                        <a href="#album5">Untouchables</a>
-                        <a href="#album6">Take A Look In The Mirror</a>
-                        <a href="#album7">See You On The Other Side</a>
                     </div>
                 </header>
                 <div class="membersec">
@@ -78,16 +78,34 @@
                         <div class="membername">
                             <h1>Jonathan Davis</h1>
                             <h2>Vocalist</h2>
-                            <p>
-                                (born January 18, 1971), also known as JD, is an
-                                American singer, songwriter, and musician. He is
-                                the lead vocalist and frontman of nu metal band
-                                Korn, which is considered a pioneering act of
-                                the nu metal genre. Davis's distinctive
-                                personality and Korn's music influenced a
-                                generation of musicians and performers who have
-                                come after them.
-                            </p>
+                            <div>
+                                <div class="infoarrowdown">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        height="32px"
+                                        viewBox="0 -960 960 960"
+                                        width="32px"
+                                        fill="#e3e3e3"
+                                    >
+                                        <path
+                                            d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
+                                        />
+                                    </svg>
+                                </div>
+                                <div class="memberinfo">
+                                    <p>
+                                        (born January 18, 1971), also known as
+                                        JD, is an American singer, songwriter,
+                                        and musician. He is the lead vocalist
+                                        and frontman of nu metal band Korn,
+                                        which is considered a pioneering act of
+                                        the nu metal genre. Davis's distinctive
+                                        personality and Korn's music influenced
+                                        a generation of musicians and performers
+                                        who have come after them.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="memberbox">
@@ -96,18 +114,35 @@
                             <div class="membername">
                                 <h1>Brian "Head" Welch</h1>
                                 <h2>Rythm Guitar</h2>
-                                <p>
-                                    (born June 19, 1970), is an American
-                                    musician. He is a guitarist and founding
-                                    member of the nu metal band Korn also
-                                    provides vocals. Along with Munky, Welch
-                                    helped develop Korn's distinctive sound (a
-                                    mix of sirenlike shards of dissonant guitar
-                                    that mimicked a turntablist's various
-                                    effects and rumbling down-tuned riffing)
-                                    that defined the nu metal aesthetic
-                                    beginning in the mid-'90s.
-                                </p>
+                                <div>
+                                    <div class="infoarrowdown">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            height="32px"
+                                            viewBox="0 -960 960 960"
+                                            width="32px"
+                                            fill="#e3e3e3"
+                                        >
+                                            <path
+                                                d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
+                                            />
+                                        </svg>
+                                    </div>
+                                    <div class="memberinfo">
+                                        <p>
+                                            (born June 19, 1970), is an American
+                                            musician. He is a guitarist and
+                                            founding member of the nu metal band
+                                            Korn also provides vocals. Welch
+                                            helped develop Korn's distinctive
+                                            sound (a mix of sirenlike shards of
+                                            dissonant guitar that mimicked a
+                                            turntablist's various effects) that
+                                            defined the nu metal aesthetic
+                                            beginning in the mid-'90s.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -117,13 +152,31 @@
                             <div class="membername">
                                 <h1>James "Munky" Shaffer</h1>
                                 <h2>Lead Guitar</h2>
-                                <p>
-                                    (born June 6, 1970), is an American musician
-                                    best known as a co-founder and guitarist of
-                                    the nu metal band Korn. He was ranked at No.
-                                    26 of Guitar World's 100 Greatest Heavy
-                                    Metal Guitarists of All Time.
-                                </p>
+                                <div>
+                                    <div class="infoarrowdown">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            height="32px"
+                                            viewBox="0 -960 960 960"
+                                            width="32px"
+                                            fill="#e3e3e3"
+                                        >
+                                            <path
+                                                d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
+                                            />
+                                        </svg>
+                                    </div>
+                                    <div class="memberinfo">
+                                        <p>
+                                            (born June 6, 1970), is an American
+                                            musician best known as a co-founder
+                                            and guitarist of the nu metal band
+                                            Korn. He was ranked at No. 26 of
+                                            Guitar World's 100 Greatest Heavy
+                                            Metal Guitarists of All Time.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -133,29 +186,63 @@
                             <div class="membername">
                                 <h1>Reginald "Fieldy" Arvisu</h1>
                                 <h2>Bassist</h2>
-                                <p>
-                                    (born November 2, 1969), Known for his
-                                    percussive, slap-heavy bass style, he has
-                                    also released solo rap and instrumental
-                                    projects and performed with the band
-                                    Stillwell.
-                                </p>
+                                <div>
+                                    <div class="infoarrowdown">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            height="32px"
+                                            viewBox="0 -960 960 960"
+                                            width="32px"
+                                            fill="#e3e3e3"
+                                        >
+                                            <path
+                                                d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
+                                            />
+                                        </svg>
+                                    </div>
+                                    <div class="memberinfo">
+                                        <p>
+                                            (born November 2, 1969), Known for
+                                            his percussive, slap-heavy bass
+                                            style, he has also released solo rap
+                                            and instrumental projects and
+                                            performed with the band Stillwell.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="memberbox">
                         <div class="member">
                             <img src="images/david.jpg" alt="David" />
-
                             <div class="membername">
                                 <h1>David Silveria</h1>
                                 <h2>Drummer</h2>
-                                <p>
-                                    (born September 21, 1972) His drumming
-                                    style, which blended heavy metal with funk
-                                    and hip-hop influences, was a defining
-                                    element of Korn's early sound.
-                                </p>
+                                <div>
+                                    <div class="infoarrowdown">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            height="32px"
+                                            viewBox="0 -960 960 960"
+                                            width="32px"
+                                            fill="#e3e3e3"
+                                        >
+                                            <path
+                                                d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
+                                            />
+                                        </svg>
+                                    </div>
+                                    <div class="memberinfo">
+                                        <p>
+                                            (born September 21, 1972) His
+                                            drumming style, which blended heavy
+                                            metal with funk and hip-hop
+                                            influences, was a defining element
+                                            of Korn's early sound.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
