--- a/followtheleader.html
+++ b/followtheleader.html
@@ -9,26 +9,65 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html#album3"
-            ><div>
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="50px"
-                    viewBox="0 -960 960 960"
-                    width="50px"
-                    fill="#e3e3e3"
-                >
-                    <path
-                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
-                    />
-                </svg></div
-        ></a>
+        <header class="pagesheader">
+            <div class="navigation">
+                <div class="backtomenu">
+                    <a href="index.html#album4"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+                <div class="centerpages">
+                    <a href="lifeispeachy.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                    <h1 class="followtrackheader">Follow The Leader</h1>
+                    <a href="issues.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+            </div>
+        </header>
         <div class="fatboy">
             <div class="cover">
                 <a
                     href="https://youtube.com/playlist?list=OLAK5uy_lN3gSClGJU--GAHceqHudhjb4id44kPY4&si=0UuRw5BmwT2SDgAW"
                     ><img
                         class="cover"
+                        width="316px"
+                        height="316px"
                         src="images/Korn_follow_the_leader.jpg"
                         alt="FollowTheLeader"
                 /></a>
