--- a/takealookinthemirror.html
+++ b/takealookinthemirror.html
@@ -9,20 +9,57 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html#album6"
-            ><div>
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="50px"
-                    viewBox="0 -960 960 960"
-                    width="50px"
-                    fill="#e3e3e3"
-                >
-                    <path
-                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
-                    />
-                </svg></div
-        ></a>
+        <header class="pagesheader">
+            <div class="navigation">
+                <div class="backtomenu">
+                    <a href="index.html#album6"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+                <div class="centerpages">
+                    <a href="untochables.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                    <h1 class="taketrackheader">Take A Look In The Mirror</h1>
+                    <a href="seeyouontheotherside.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+            </div>
+        </header>
         <div class="fatboy">
             <div class="cover">
                 <a
