--- a/untochables.html
+++ b/untochables.html
@@ -9,20 +9,57 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html#album5"
-            ><div>
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="50px"
-                    viewBox="0 -960 960 960"
-                    width="50px"
-                    fill="#e3e3e3"
-                >
-                    <path
-                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
-                    />
-                </svg></div
-        ></a>
+        <header class="pagesheader">
+            <div class="navigation">
+                <div class="backtomenu">
+                    <a href="index.html#album5"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+                <div class="centerpages">
+                    <a href="issues.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"
+                                />
+                            </svg></div
+                    ></a>
+                    <h1 class="untrackheader">Untouchables</h1>
+                    <a href="takealookinthemirror.html"
+                        ><div>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="50px"
+                                viewBox="0 -960 960 960"
+                                width="50px"
+                                fill="#e3e3e3"
+                            >
+                                <path
+                                    d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"
+                                />
+                            </svg></div
+                    ></a>
+                </div>
+            </div>
+        </header>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -36,72 +73,72 @@
             <div class="tracklist">
                 <a
                     class="untrack"
-                    href="https://youtu.be/IQhVTcH6Hy0?si=q-hNnXS1WUeY2xyD"
+                    href="https://youtu.be/pr3x7tS__dE?si=KioQlqasUOvccOmR"
                     >1. Here to Stay</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/2s3iGpDqQpQ?si=Qgr_AZz-Ri7Xgegx"
+                    href="https://youtu.be/wvLrlNxXb78?si=TcxFT2MK-qWAl8IT"
                     >2. Make Believe</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/oH9qfBQZYSo?si=JQGwg6t6zbE05uqk"
+                    href="https://youtu.be/tHTZQBjHc_M?si=BCgq88aqMdJY58r9"
                     >3. Blame</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/BnfixOKISzc?si=O66l6iO2DyByyLI8"
+                    href="https://youtu.be/f9VejccDPBw?si=IXt0bJ3B1TjAaNA5"
                     >4. Hollow Life</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/1_tuNHEl-Do?si=2q3u6j6iBxaF10Y5"
+                    href="https://youtu.be/2zW9B-1W9nA?si=yRldMMINijZfmPpR"
                     >5. Bottled Up Inside</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/ujEph5vFwmc?si=y45VUHKcd2g5AZui"
+                    href="https://youtu.be/d7yQTL04Ftc?si=_zVt5a2PNeRaDDcS"
                     >6. Thoughtless</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/gf1syDprBII?si=6yn9_WtpRw98PfZ7"
+                    href="https://youtu.be/uK0dwMCbw1Y?si=XGmLUzNBNmRF9cto"
                     >7. Hating</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/wU6pxz8oCdQ?si=j-reDMTXgvhpkoak"
+                    href="https://youtu.be/Pzs1qkU1lkI?si=zF5YFAORb9vba4gK"
                     >8. One More Time</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/hDSz_9l4xgU?si=5foYa0IU3_dTH4GD"
+                    href="https://youtu.be/V3GA2d-J2_A?si=wSCTPchMHLiP2NhY"
                     >9. Alone I Break</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/5Ez17h1EkK8?si=FO0-ueXq72AY07sP"
+                    href="https://youtu.be/DtDYxH1bmqI?si=PCd8F04-UGqLlIWQ"
                     >10. Embrace</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/FBEE-t-uyI0?si=XoWBiS26iAPtaLsZ"
+                    href="https://youtu.be/SySHQ2xUWEA?si=T1W0IYzZFKYCunn0"
                     >11. Beat It Upright</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/OXgOSyLSydk?si=uoKr11Pmg170DeYp"
+                    href="https://youtu.be/VbCJGCG7F-0?si=fZXn-pzM4ZRrRU_d"
                     >12. Wake Up Hate</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/nDKptWMsWSU?si=IxFtly42rWm-FrUG"
+                    href="https://youtu.be/RgXCaVTrAcI?si=wQo-KzaPO5YXRIKZ"
                     >13. I'm Hiding</a
                 >
                 <a
                     class="untrack"
-                    href="https://youtu.be/ecapikEoLio?si=CX1OhrfJLm-3UAfT"
+                    href="https://youtu.be/8gYJatiODnM?si=K76Mht8mtawA9q5w"
                     >14. No One's There</a
                 >
             </div>
