--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Korn l Fanmade Website by FatzRon</title>
         <link rel="stylesheet" href="style.css" />
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     </head>
     <body>
         <main>
