fixed:grouppic lining

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     />
                     <img
                         class="grouppic"
-                        src="images/korn-freak-leash-oral-history-br-remove.jpg"
+                        src="images/korn-freak-leash-oral-history.png"
                         alt=""
                     />
                 </div>
